--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -14,14 +14,14 @@
 		  	<label for="title">TITLE</label>
 			<input type="text" id="title" th:field="*{title}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
-		  	<label for="email">ISBN</label>
-			<input type="isbn" th:field="*{isbn}" />
+		  	<label for="isbn">ISBN</label>
+			<input type="text" th:field="*{isbn}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
-			<label for="email">YEAR</label>
-			<input type="year" th:field="*{year}" />
+			<label for="year">YEAR</label>
+			<input type="text" th:field="*{year}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
-			<label for="email">PRICE</label>
-			<input type="price" th:field="*{price}" />
+			<label for="price">PRICE</label>
+			<input type="text" th:field="*{price}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
 			<input type="submit" value="Save"></input>
 		</form>
