--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -20,6 +20,7 @@
 			<td th:text="${book.isbn}"></td>
 			<td th:text="${book.year}"></td>
     		<td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
+			<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>    	
     	</tr>
      </table>
   	 <a href="/add" class="btn btn-success">Add book</a>
