--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-	<h1>Add book</h1>
+	<h1>Edit book</h1>
 	<div>
-		<form th:object="${book}" th:action="@{save}" action="#" method="post">
+		<form th:object="edit/${book.id}" th:action="@{save}" action="#" method="post">
 		  	<label for="author">AUTHOR</label>
 			<input type="text" id="author" th:field="*{author}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
