--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Edit book</h1>
 	<div>
-		<form th:object="${book}" th:action="@{save}" action="#" method="post">
+		<form th:object="${book}" th:action="@{/save}" action="#" method="post">
 		  	<label for="author">AUTHOR</label>
 			<input type="text" id="author" th:field="*{author}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
@@ -23,6 +23,7 @@
 			<label for="price">PRICE</label>
 			<input type="text" id="price" th:field="*{price}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
+			<input type="hidden" th:field="*{id}"></input>
 			<input type="submit" value="Save"></input>
 		</form>
 	</div>
