--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -22,6 +22,13 @@
 			<div style="clear: both; display: block; height: 10px;"></div>
 			<label for="price">PRICE</label>
 			<input type="text" id="price" th:field="*{price}" />
+			
+			<div style="clear: both; display: block; height: 10px;"></div>
+			<label for="catlist">Category</label>
+			<select id="catlist" th:field="*{category} class="form-control">
+			<option th:each="category: ${categories}" th:value="${category.categoryId" th:text="${category.name}"></option>
+			</select>
+			
 			<div style="clear: both; display: block; height: 10px;"></div>
 			<input type="hidden" th:field="*{id}"></input>
 			<input type="submit" value="Save"></input>
