--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -22,11 +22,13 @@
 			<div style="clear: both; display: block; height: 10px;"></div>
 			<label for="price">PRICE</label>
 			<input type="text" id="price" th:field="*{price}" />
-			
 			<div style="clear: both; display: block; height: 10px;"></div>
+			
 			<label for="catlist">Category</label>
 			<select id="catlist" th:field="*{category} class="form-control">
-			<option th:each="category: ${categories}" th:value="${category.categoryId" th:text="${category.name}"></option>
+			<option th:each="category: ${categories}" 
+					th:value="${category.categoryId}" 
+					th:text="${category.name}"></option>
 			</select>
 			
 			<div style="clear: both; display: block; height: 10px;"></div>
