--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -25,7 +25,7 @@
 			<div style="clear: both; display: block; height: 10px;"></div>
 			
 			<label for="catlist">Category</label>
-			<select id="catlist" th:field="*{category} class="form-control">
+			<select id="catlist" th:field="*{category}" class="form-control">
 			<option th:each="category: ${categories}" 
 					th:value="${category.categoryId}" 
 					th:text="${category.name}"></option>
