--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -3,6 +3,7 @@
 <head>
     <title>Booklist</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
 	<h1>Add book</h1>
@@ -24,7 +25,7 @@
 			<input type="text" id="price" th:field="*{price}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
 			
-			<label for="catlist">Category</label>
+			<label for="catlist">CATEGORY</label>
 			<select id="catlist" th:field="*{category}" class="form-control">
 			<option th:each="category: ${categories}" 
 					th:value="${category.categoryId}" 
@@ -32,7 +33,7 @@
 			</select>
 			
 			<div style="clear: both; display: block; height: 10px;"></div>
-			<input type="submit" value="Save"></input>
+			<input class="btn btn-success" type="submit" value="Save"></input>
 		</form>
 	</div>
 </body>
