--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -3,7 +3,7 @@
 <head>
     <title>Booklist</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />    
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />    
 </head>
 <body>
 	<h1>Edit book</h1>
@@ -27,14 +27,13 @@
 			<input type="text" id="price" th:field="*{price}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
 			
-			<label for="catlist">Category</label>
+			<label for="catlist">CATEGORY</label>
 			<select id="catlist" th:field="*{category}" class="form-control">
 			<option th:each="category: ${categories}" 
 					th:value="${category.categoryId}" 
 					th:text="${category.name}"></option>
-			</select>
+			</select><br>
 			
-			<div style="clear: both; display: block; height: 10px;"></div>
 			<input class="btn btn-success" type="submit" value="Save"></input>
 		</form>
 	</div>
