--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -13,7 +13,7 @@
 		    <th>Title</th>
 		    <th>ISBN</th>
 		    <th>Year</th>
-		    <th>Category</th>
+		    <th>Category</th><th></th><th></th>
 		</tr>  
     	<tr th:each = "book : ${books}">
     		<td th:text="${book.author}"></td>
