--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -27,7 +27,7 @@
 			<td th:text="${book.year}"></td>
 			<td th:text="${book.category.name}"></td>
     		<td sec:authorize="hasRole('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
-			<td><a th:href="{/edit/{id}(id=${book.id})}" class="btn btn-warning">Edit</a></td>    	
+			<td><a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-warning">Edit</a></td>    	
     	</tr>
      </table>
   	 <a href="/add" class="btn btn-success">Add book</a>
